# MeetingTranscriber

./: .gitignore  CLAUDE.md  README.md  TECHNICAL.md  golden-hopping-sparrow.md  gradle.properties  meeting_check.txt  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/res/drawable/: bg_camera_circle.xml  bg_shutter.xml  circle_indicator_recording.xml  circle_indicator_summary.xml  circle_status.xml  ic_api_config.xml  ic_check_circle.xml  ic_flash_off.xml  ic_history.xml  ic_home.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_meeting.xml  ic_search.xml  ic_settings.xml  ic_shutter.xml  summary_bg.xml
app/src/main/res/layout/: activity_camera_capture.xml  activity_main.xml  dialog_qr_share.xml  fragment_album.xml  fragment_api_config.xml  fragment_detail.xml  fragment_history.xml  fragment_home.xml  fragment_meeting.xml  fragment_settings.xml  item_album_photo.xml  item_meeting_history.xml  item_meeting_home.xml  item_topic_header.xml  item_transcript_segment.xml
app/src/main/res/menu/: bottom_navigation.xml
app/src/main/res/values/: colors.xml  ids.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  file_paths.xml  network_security_config.xml
desktopApp/: build.gradle.kts
docs/: AI会议功能需求-四轮开发计划.md  P0-安全与数据保护-方案与实施.md  代码审查修复方案-2026-07-09.md  团队操作手册.md
gradle/: libs.versions.toml
prototype/: index.html
shared/: build.gradle.kts
(+193 files in other folders)
